Fixed z-index issue on fam circles

--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -317,12 +317,15 @@ $swiper-transition: transform .3s ease;
     }
   }
   .fam-circle-title {
+    width: 100%;
     font-size: 1.5em;
     position: absolute;
   }
   .fam-circle-content {
+    width: 100%;
     display: none;
     opacity: 0;
+    position: relative;
     backface-visibility: visible;
   }
   .main-content .fam-circle-text {
@@ -347,6 +350,7 @@ $swiper-transition: transform .3s ease;
       content: '';
       display: block;
       position: absolute;
+      z-index: 0;
       width: 160px;
       height: 160px;
       border-radius: 50%;
